<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.kkriske</groupId>
    <artifactId>graalvm-awt</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <graalvm.version>23.0.0</graalvm.version>
        <buildtools.version>0.9.23</buildtools.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.graalvm.sdk</groupId>
            <artifactId>graal-sdk</artifactId>
            <version>${graalvm.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.oracle</groupId>
            <artifactId>svm</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${java.home}/lib/svm/builder/svm.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.9.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>17</release>
                    <compilerArgs>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>${buildtools.version}</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <id>test-native-headless</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <phase>test</phase>
                        <configuration>
                            <buildArgs combine.children="append">
                                <arg>-Dtest.headless=true</arg>
                            </buildArgs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>test-native-heady</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <phase>test</phase>
                        <configuration>
                            <buildArgs combine.children="append">
                                <arg>-Dtest.headless=false</arg>
                            </buildArgs>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <fallback>false</fallback>
                    <verbose>false</verbose>
                    <buildArgs>
                        <arg>-H:+ReportExceptionStackTraces</arg>
                        <arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</arg>
                        <arg>--initialize-at-build-time=org.junit.jupiter.api.condition.OS</arg>
                    </buildArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
